--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "keeper-part-3-starting",
+  "name": "keeper",
   "version": "1.0.0",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
+    "@material-ui/icons": "^4.9.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
